// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`as-category-widget Rendering should format display value when formatValue prop is present 1`] = `
<as-category-widget
  class="hydrated"
>
  
  <h2
    class="as-category-widget__heading"
  >
    
  </h2>
  <p
    class="as-category-widget__description as-body"
  >
    
  </p>
  <ul
    class="as-category-widget__list"
  >
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Bars & Restaurants
        </div>
        1000€
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="background-color: rgb(250, 186, 218); width: 64.51612903225806%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Fashion
        </div>
        900€
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 58.06451612903226%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Grocery
        </div>
        800€
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 51.61290322580645%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Health
        </div>
        400€
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 25.806451612903224%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Shopping mall
        </div>
        250€
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 16.129032258064516%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Transportation
        </div>
        1550€
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 100%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Leisure
        </div>
        1200€
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 77.41935483870968%;"
        />
      </div>
    </li>
    
  </ul>
  <footer
    class="as-category-widget__footer"
  >
    <div
      class="as-category-widget__count as-body"
    >
      All selected
    </div>
    
  </footer>
</as-category-widget>
`;

exports[`as-category-widget Rendering should not render header when showHeader is false 1`] = `
<as-category-widget
  class="hydrated"
>
  
  
  <ul
    class="as-category-widget__list"
  >
    
  </ul>
  <footer
    class="as-category-widget__footer"
  >
    <div
      class="as-category-widget__count as-body"
    >
      All selected
    </div>
    
  </footer>
</as-category-widget>
`;

exports[`as-category-widget Rendering should render bars according to total value 1`] = `
<as-category-widget
  class="hydrated"
>
  
  <h2
    class="as-category-widget__heading"
  >
    
  </h2>
  <p
    class="as-category-widget__description as-body"
  >
    
  </p>
  <ul
    class="as-category-widget__list"
  >
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Bars & Restaurants
        </div>
        1.0K
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="background-color: rgb(250, 186, 218); width: 16.39344262295082%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Fashion
        </div>
        900
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 14.754098360655737%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Grocery
        </div>
        800
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 13.114754098360656%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Health
        </div>
        400
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 6.557377049180328%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Shopping mall
        </div>
        250
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 4.098360655737705%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Transportation
        </div>
        1.6K
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 25.40983606557377%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Leisure
        </div>
        1.2K
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 19.672131147540984%;"
        />
      </div>
    </li>
    
  </ul>
  <footer
    class="as-category-widget__footer"
  >
    <div
      class="as-category-widget__count as-body"
    >
      All selected
    </div>
    
  </footer>
</as-category-widget>
`;

exports[`as-category-widget Rendering should render clear button 1`] = `
<as-category-widget
  class="hydrated"
>
  
  <h2
    class="as-category-widget__heading"
  >
    
  </h2>
  <p
    class="as-category-widget__description as-body"
  >
    
  </p>
  <ul
    class="as-category-widget__list"
  >
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Bars & Restaurants
        </div>
        1.0K
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="background-color: rgb(250, 186, 218); width: 64.51612903225806%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Fashion
        </div>
        900
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 58.06451612903226%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Grocery
        </div>
        800
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 51.61290322580645%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Health
        </div>
        400
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 25.806451612903224%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Shopping mall
        </div>
        250
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 16.129032258064516%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Transportation
        </div>
        1.6K
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 100%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Leisure
        </div>
        1.2K
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 77.41935483870968%;"
        />
      </div>
    </li>
    
  </ul>
  <footer
    class="as-category-widget__footer"
  >
    <div
      class="as-category-widget__count as-body"
    >
      All selected
    </div>
    <button
      class="as-btn as-btn--primary as-btn--s as-category-widget__clear"
      disabled=""
    >
      Clear selection
    </button>
  </footer>
</as-category-widget>
`;

exports[`as-category-widget Rendering should render properly 1`] = `
<as-category-widget
  class="hydrated"
>
  
  <h2
    class="as-category-widget__heading"
  >
    Category Widget Example
  </h2>
  <p
    class="as-category-widget__description as-body"
  >
    Description for Category Widget
  </p>
  <ul
    class="as-category-widget__list"
  >
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Bars & Restaurants
        </div>
        1.0K
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="background-color: rgb(250, 186, 218); width: 64.51612903225806%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Fashion
        </div>
        900
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 58.06451612903226%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Grocery
        </div>
        800
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 51.61290322580645%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Health
        </div>
        400
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 25.806451612903224%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Shopping mall
        </div>
        250
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 16.129032258064516%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Transportation
        </div>
        1.6K
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 100%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__info as-body"
      >
        <div
          class="as-category-widget__title"
        >
          Leisure
        </div>
        1.2K
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__bar-value"
          style="width: 77.41935483870968%;"
        />
      </div>
    </li>
    
  </ul>
  <footer
    class="as-category-widget__footer"
  >
    <div
      class="as-category-widget__count as-body"
    >
      All selected
    </div>
    <button
      class="as-btn as-btn--primary as-btn--s as-category-widget__clear"
      disabled=""
    >
      Clear selection
    </button>
  </footer>
</as-category-widget>
`;
